# imaging-problem-list

./: .env.test  .gitignore  CLAUDE.md  DEPLOYMENT.md  PROJECT_INDEX.json  README.md  deploy.sh  extracted.json  initial-extraction-plan.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
data/: patients.json
data/patients/patient-mrn0000001/: patient.json
report-extracts/: Readme.md
report-extracts/imaging-problem-list-mvp/: Output_Summary.md  Output_Summary_prompt 1.md  Output_Summary_prompt 2.md  README.md  requirements.txt
report-extracts/imaging-problem-list-mvp/data/: hydrocephalus reports.rtf  (+4 more)
sample_data/: powerscribe-fhir.json  sample_efl.json
sample_data/example1/: chest-ct-fhir.json  chest_ct_efl.json  sample_efl.json  sample_ipl.json
sample_data/example2/: MRN0000001_ipl.json  ct_abdomen_20221103.md  ct_abdomen_20221103_efl.json  ct_chest_20220922.md  ct_chest_20220922_efl.json  findings_with_oifm_ids.xlsx  mr_brain_20230125.md  mr_brain_20230125_efl.json  us_abdomen_20220208.md  xr_chest_20210614.md  xr_chest_20220315_efl.json  xr_shoulder_20210522.md
scripts/: generate_efl_from_excel.py  generate_finding_display_info.py  generate_ipl_from_efls.py
src/finding_extractor/: __init__.py  agent.py  cli.py  examples.py  models.py
tests/: conftest.py  test_cli.py  test_extraction.py  test_models.py
viewer/: FLOWBITE_REFERENCE.md  README.md  app.js  index.html
viewer/data/: enriched_findings.json  exam_type_mappings.json  finding_display_info.json  finding_region_mappings.json  patients.json
(+25 files in other folders)
